随便改一下试试

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </li>
 </ul>
 </div>
-   <p>“从来就没有什么救世主”“也没有神仙上帝”</p>
+   <p>“但行好事！！！”“莫问前程！！！”</p>
 <ul class="countdown">
   <li>
     <p>Visit Blog &nbsp; <a href="http://Blog.iuuv.cn"  target="_blank">iuuv</a>&nbsp;
