注释了部分信息

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     </li>
   </ul>
 </div>
-  <div class="fixed">
+  <!-- <div class="fixed">
   <ul class="countdown">
     <li>
       <p>
-        <a href="https://beian.miit.gov.cn/#/Integrated/index"  target="_blank">京ICP备20024591号-1</a>
+      <a href="https://beian.miit.gov.cn/#/Integrated/index"  target="_blank">京ICP备20024591号-1</a>
       </p>
     </li>
-  </ul></div>
+  </ul></div> -->
             <script type="text/javascript" src="js/jquery.min.js"></script>
             <script type="text/javascript" src="js/jquery.downCount.js"></script> 
             <script type="text/javascript" src="js/Chestnut.js"></script> 
