更新了部分链接

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    <p>“但行好事！！！”“莫问前程！！！”</p>
 <ul class="countdown">
   <li>
-    <p>Visit Blog &nbsp; <a href="http://Blog.iuuv.cn"  target="_blank">iuuv</a>&nbsp;
+    <p>Visit Blog &nbsp; <a href="http://www.iuuv.cn"  target="_blank">iuuv</a>&nbsp;
       <a href="http://zhihu.com/people/sdkey" target="_blank">zhihu</a>&nbsp;
       <a href="https://weibo.com/u/7294984151?topnav=1&wvr=6&topsug=1"  target="_blank">weibo</a>
     </p>
