添加了访问统计

--- a/next.html
+++ b/next.html
@@ -23,6 +23,15 @@ filter:alpha(opacity=35); /* 针对 IE8 以及更早的版本 */
 }
 /* css注释：为了观察效果设置宽度 边框 高度等样式 */ 
   </style>
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?cc78dda61156219190592f4a44a75d33";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </head>
 <body class='particle-network-animation'>
   <div class="box_relative">
