--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <meta name="description" content="iuuv" />
 <link href="css/Chestnut.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
+<!--百度访问统计-->
  <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?cc78dda61156219190592f4a44a75d33";
+  hm.src = "https://hm.baidu.com/hm.js?610e0334b8a55c57388f63ae070d1673";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
