--- a/next.html
+++ b/next.html
@@ -23,11 +23,12 @@ filter:alpha(opacity=35); /* 针对 IE8 以及更早的版本 */
 }
 /* css注释：为了观察效果设置宽度 边框 高度等样式 */ 
   </style>
-	<script>
+<!--百度访问统计-->
+ <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?cc78dda61156219190592f4a44a75d33";
+  hm.src = "https://hm.baidu.com/hm.js?610e0334b8a55c57388f63ae070d1673";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
