--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ var _hmt = _hmt || [];
     <li>
       <p>
         <a href="http://sighttp.qq.com/authd?IDKEY=c8346456c065a21efe7c7be4b3fbc8c11a2ef43da81dcfce" target="_blank"><img border="0"  src="img/q.png" alt="联系我" title="联系我"/></a>
-        &nbsp;<a href="next.html" target="_blank"><img border="0"  src="img/w.png" alt="关注我" title="关注我"/></a>
+        &nbsp;<a href="weixin://dl/business/?t=wabulabuwauiuuvlykcn"  src="img/w.png" alt="加微信" title="加微信"/></a>
         &nbsp;<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=A3BwZ2hmekNyci1gbG4" target="_blank"><img border="0"  src="img/m.png" alt="给我写信" title="给我写信"/></a>
       </p>
     </li>
