--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ var _hmt = _hmt || [];
 })();
 </script>
 </head>
-<body class='particle-network-animation'>
+<body>
 <div class="box_relative">
  <h1 align="center" style="font-size: 70px;"">来到地球的</h1>
 <div>
@@ -54,20 +54,11 @@ var _hmt = _hmt || [];
     <li>
       <p>
         <a href="http://sighttp.qq.com/authd?IDKEY=c8346456c065a21efe7c7be4b3fbc8c11a2ef43da81dcfce" target="_blank"><img border="0"  src="img/q.png" alt="联系我" title="联系我"/></a>
-        &nbsp;<a href="weixin://dl/business/?t=wabulabuwauiuuvlykcn" target="_blank"><img border="0" src="img/wechat.png" alt="加微信" title="加微信"/></a>
         &nbsp;<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=A3BwZ2hmekNyci1gbG4" target="_blank"><img border="0"  src="img/m.png" alt="给我写信" title="给我写信"/></a>
       </p>
     </li>
   </ul>
 </div>
-  <!-- <div class="fixed">
-  <ul class="countdown">
-    <li>
-      <p>
-      <a href="https://beian.miit.gov.cn/#/Integrated/index"  target="_blank">京ICP备20024591号-1</a>
-      </p>
-    </li>
-  </ul></div> -->
             <script type="text/javascript" src="js/jquery.min.js"></script>
             <script type="text/javascript" src="js/jquery.downCount.js"></script> 
             <script type="text/javascript" src="js/Chestnut.js"></script> 
