--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -41,7 +41,7 @@ var _hmt = _hmt || [];
   </li>
 </ul>
 </div>
-   <p>“但行好事！！！”“莫问前程！！！”</p>
+   <p>“但行好事” “莫问前程”</p>
 <ul class="countdown">
   <li>
     <p>Visit Blog &nbsp; <a href="http://www.iuuv.cn"  target="_blank">iuuv</a>&nbsp;
