--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+ <!--小飞机-->
+<script>
+window.tip_chato_color="#fff";
+window.tip_chato_bg="#4C83F3";
+window.chato_iframe_src = "https://chato.cn/b/n081w73zle5xdm2k";
+window.chato_script_checkDomain = "https://api.chato-ai.com/chato/api/v1/domains/n081w73zle5xdm2k/whitelist_sites/check";
+var st = document.createElement("script");
+st.type="text/javascript";
+st.async = true;st.src = "https://chato.cn/assets/iframe.min.js";
+var header = document.getElementsByTagName("head")[0];
+header.appendChild(st);
+</script>
 </head>
 <body>
 <div class="box_relative">
@@ -77,16 +89,6 @@ var _hmt = _hmt || [];
                     alert('!');
                 });
             </script>
-<script>
-window.tip_chato_color="#fff";
-window.tip_chato_bg="#4C83F3";
-window.chato_iframe_src = "https://chato.cn/b/n081w73zle5xdm2k";
-window.chato_script_checkDomain = "https://api.chato-ai.com/chato/api/v1/domains/n081w73zle5xdm2k/whitelist_sites/check";
-var st = document.createElement("script");
-st.type="text/javascript";
-st.async = true;st.src = "https://chato.cn/assets/iframe.min.js";
-var header = document.getElementsByTagName("head")[0];
-header.appendChild(st);</script>
 </body>
 
 </html>
